v4: update repository, controller, service, and tests